--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    
+    <link rel="canonical" href="https://elf-on-the-shelf-ideas.pages.dev/">
+
     <style>
         :root {
             --christmas-red: #C62828;
