--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
+   <head>
+    <!-- Charset & Responsive -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elf on the Shelf Ideas 🎄 - 200+ Creative & Easy Elf Ideas for Christmas 2025</title>
-    <meta name="description" content="Discover 200+ creative elf on the shelf ideas, easy elf ideas, funny elf suggestions, and quick elf on shelf setups for Christmas 2025. Get inspiration for naughty elf ideas, last minute elf activities, and hilarious elf on the shelf moments.">
-    <meta name="keywords" content="elf ideas, elf on the shelf ideas, easy elf on the shelf ideas, funny elf on the shelf ideas, quick elf on the shelf ideas, naughty elf ideas, elf on shelf suggestions, last minute elf on the shelf ideas">
+
+    <!-- Primary Meta -->
+    <title>12 Elf on the Shelf Ideas 🎄 for Christmas 2025</title>
+    <meta name="description" content="Find 12 creative, funny, and easy Elf on the Shelf ideas to surprise your kids this Christmas 2025. Perfect for quick and last-minute setups.">
+    <meta name="keywords" content="elf ideas, elf on the shelf ideas, easy elf on the shelf ideas, funny elf on the shelf ideas, quick elf on the shelf ideas, naughty elf ideas, last minute elf on the shelf ideas">
+    <link rel="canonical" href="https://elf-on-the-shelf-ideas.pages.dev/">
+       <!-- Robots -->
+<meta name="robots" content="index, follow">
+
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://elf-on-the-shelf-ideas.pages.dev/">
+    <meta property="og:title" content="12 Elf on the Shelf Ideas 🎄 for Christmas 2025">
+    <meta property="og:description" content="Explore 12 creative and funny Elf on the Shelf setups for Christmas 2025. Easy, last-minute ideas to bring holiday magic to life.">
+    <meta property="og:image" content="https://yourdomain.com/images/elf-cover.jpg"> <!-- Replace with your image -->
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://elf-on-the-shelf-ideas.pages.dev/">
+    <meta name="twitter:title" content="12 Elf on the Shelf Ideas 🎄 for Christmas 2025">
+    <meta name="twitter:description" content="Get inspired with 12 fun and easy Elf on the Shelf ideas for Christmas 2025. Perfect for quick and last-minute setups your kids will love.">
+    <meta name="twitter:image" content="https://yourdomain.com/images/elf-cover.jpg"> <!-- Replace with your image -->
+
+    <!-- Styles & Fonts -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://elf-on-the-shelf-ideas.pages.dev/">
+
 
     <style>
         :root {
