--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <meta property="og:url" content="https://elf-on-the-shelf-ideas.pages.dev/">
     <meta property="og:title" content="12 Elf on the Shelf Ideas 🎄 for Christmas 2025">
     <meta property="og:description" content="Explore 12 creative and funny Elf on the Shelf setups for Christmas 2025. Easy, last-minute ideas to bring holiday magic to life.">
-    <meta property="og:image" content="https://yourdomain.com/images/elf-cover.jpg"> <!-- Replace with your image -->
+    <meta property="og:image" content="https://elf-on-the-shelf-ideas.pages.dev/elf-on-shelf-ideas-cover.png"> <!-- Replace with your image -->
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://elf-on-the-shelf-ideas.pages.dev/">
     <meta name="twitter:title" content="12 Elf on the Shelf Ideas 🎄 for Christmas 2025">
     <meta name="twitter:description" content="Get inspired with 12 fun and easy Elf on the Shelf ideas for Christmas 2025. Perfect for quick and last-minute setups your kids will love.">
-    <meta name="twitter:image" content="https://yourdomain.com/images/elf-cover.jpg"> <!-- Replace with your image -->
+    <meta name="twitter:image" content="https://elf-on-the-shelf-ideas.pages.dev/elf-on-shelf-ideas-cover.png"> <!-- Replace with your image -->
 
     <!-- Styles & Fonts -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
