--- a/index.html
+++ b/index.html
@@ -204,128 +204,109 @@
 </head>
 <body class="text-gray-800">
 
-    <!-- Hero Section -->
-    <section id="hero" class="relative min-h-screen hero-gradient flex items-center justify-center overflow-hidden">
-        <div class="snowfall" id="snowfall"></div>
-        
-        <div class="relative z-10 text-center text-white px-4 max-w-4xl mx-auto">
-            <h1 class="christmas-font text-6xl md:text-8xl mb-6 drop-shadow-lg">
-                Elf on the Shelf Ideas 🎄
-            </h1>
-            <p class="text-xl md:text-2xl mb-8 leading-relaxed">
-                Discover fun, creative, and magical Elf on the Shelf setups for the holidays. Get inspired with over 200 easy elf ideas, funny elf on the shelf suggestions, and quick elf activities that will create unforgettable Christmas memories for your family.
-            </p>
-            <button onclick="scrollToIdeas()" class="btn-primary text-white px-8 py-4 rounded-full text-lg font-semibold inline-flex items-center space-x-3 hover:shadow-2xl">
-                <i class="fas fa-gift"></i>
-                <span>Explore The Ideas - Click Here</span>
-                <i class="fas fa-arrow-down animate-bounce"></i>
-            </button>
-        </div>
-    </section>
+   <section id="ideas-grid" class="py-16 bg-white">
+    <div class="max-w-6xl mx-auto px-4">
+        <h2 class="christmas-font text-5xl text-center mb-12 text-christmas-red">
+            🎁 Creative Elf Ideas Collection 🎁
+        </h2>
 
-    <!-- Image Grid Section -->
-    <section id="ideas-grid" class="py-16 bg-white">
-        <div class="max-w-6xl mx-auto px-4">
-            <h2 class="christmas-font text-5xl text-center mb-12 text-christmas-red">
-                🎁 Creative Elf Ideas Collection 🎁
-            </h2>
-            
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12" id="ideasContainer">
-                <!-- Idea Card 1 -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
-                    <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-red-100 to-green-100">
-                        <div class="w-full h-64 flex items-center justify-center text-6xl">🧝‍♂️🍪</div>
-                    </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2 text-pine-green">Cookie Decorating Elf</h3>
-                        <p class="text-gray-600 mb-4">Easy elf ideas where your elf is caught decorating cookies with mini sprinkles and frosting.</p>
-                        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full">
-                            <i class="fas fa-download mr-2"></i>Save Image
-                        </button>
-                    </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12" id="ideasContainer">
+            <!-- Idea Card 1 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
+                <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-red-100 to-green-100">
+                    <img src="your-image-link-1.png" alt="Cookie Decorating Elf" class="w-full h-64 object-cover" />
                 </div>
-
-                <!-- Idea Card 2 -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
-                    <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-blue-100 to-purple-100">
-                        <div class="w-full h-64 flex items-center justify-center text-6xl">🧝‍♂️📚</div>
-                    </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2 text-pine-green">Reading Time Elf</h3>
-                        <p class="text-gray-600 mb-4">Quick elf on shelf ideas featuring your elf reading Christmas stories to stuffed animals.</p>
-                        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full">
-                            <i class="fas fa-download mr-2"></i>Save Image
-                        </button>
-                    </div>
-                </div>
-
-                <!-- Idea Card 3 -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
-                    <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-yellow-100 to-orange-100">
-                        <div class="w-full h-64 flex items-center justify-center text-6xl">🧝‍♂️🎨</div>
-                    </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2 text-pine-green">Artist Elf</h3>
-                        <p class="text-gray-600 mb-4">Funny elf on the shelf ideas where your elf creates masterpieces with crayons and paper.</p>
-                        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full">
-                            <i class="fas fa-download mr-2"></i>Save Image
-                        </button>
-                    </div>
-                </div>
-
-                <!-- Idea Card 4 -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
-                    <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-green-100 to-teal-100">
-                        <div class="w-full h-64 flex items-center justify-center text-6xl">🧝‍♂️🚗</div>
-                    </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2 text-pine-green">Racing Elf</h3>
-                        <p class="text-gray-600 mb-4">Last minute elf on the shelf ideas using toy cars for an exciting racing setup.</p>
-                        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full">
-                            <i class="fas fa-download mr-2"></i>Save Image
-                        </button>
-                    </div>
-                </div>
-
-                <!-- Idea Card 5 -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
-                    <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-pink-100 to-red-100">
-                        <div class="w-full h-64 flex items-center justify-center text-6xl">🧝‍♂️🎪</div>
-                    </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2 text-pine-green">Circus Elf</h3>
-                        <p class="text-gray-600 mb-4">Hilarious elf on the shelf setup with your elf performing circus acts with toys.</p>
-                        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full">
-                            <i class="fas fa-download mr-2"></i>Save Image
-                        </button>
-                    </div>
-                </div>
-
-                <!-- Idea Card 6 -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
-                    <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-purple-100 to-indigo-100">
-                        <div class="w-full h-64 flex items-center justify-center text-6xl">🧝‍♂️🏠</div>
-                    </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibeld mb-2 text-pine-green">House Builder Elf</h3>
-                        <p class="text-gray-600 mb-4">Easy ideas for elf on shelf where your elf builds houses with marshmallows and blocks.</p>
-                        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full">
-                            <i class="fas fa-download mr-2"></i>Save Image
-                        </button>
-                    </div>
+                <div class="p-6">
+                    <h3 class="text-xl font-semibold mb-2 text-pine-green">Cookie Decorating Elf</h3>
+                    <p class="text-gray-600 mb-4">Easy elf ideas where your elf is caught decorating cookies with mini sprinkles and frosting.</p>
+                    <button class="btn-primary text-white px-4 py-2 rounded-lg w-full">
+                        <i class="fas fa-download mr-2"></i>Save Image
+                    </button>
                 </div>
             </div>
 
-            <!-- Pagination -->
-            <div class="flex justify-center space-x-2" id="pagination">
-                <button class="pagination-btn active px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold" data-page="1">1</button>
-                <button class="pagination-btn px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold" data-page="2">2</button>
-                <button class="pagination-btn px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold" data-page="3">3</button>
-                <button class="pagination-btn px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold" data-page="4">4</button>
-                <button class="pagination-btn px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold" data-page="5">5</button>
+            <!-- Idea Card 2 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
+                <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-blue-100 to-purple-100">
+                    <img src="your-image-link-2.png" alt="Reading Time Elf" class="w-full h-64 object-cover" />
+                </div>
+                <div class="p-6">
+                    <h3 class="text-xl font-semibold mb-2 text-pine-green">Reading Time Elf</h3>
+                    <p class="text-gray-600 mb-4">Quick elf on shelf ideas featuring your elf reading Christmas stories to stuffed animals.</p>
+                    <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full">
+                        <i class="fas fa-download mr-2"></i>Save Image
+                    </button>
+                </div>
+            </div>
+
+            <!-- Idea Card 3 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
+                <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-yellow-100 to-orange-100">
+                    <img src="your-image-link-3.png" alt="Artist Elf" class="w-full h-64 object-cover" />
+                </div>
+                <div class="p-6">
+                    <h3 class="text-xl font-semibold mb-2 text-pine-green">Artist Elf</h3>
+                    <p class="text-gray-600 mb-4">Funny elf on the shelf ideas where your elf creates masterpieces with crayons and paper.</p>
+                    <button class="btn-primary text-white px-4 py-2 rounded-lg w-full">
+                        <i class="fas fa-download mr-2"></i>Save Image
+                    </button>
+                </div>
+            </div>
+
+            <!-- Idea Card 4 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
+                <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-green-100 to-teal-100">
+                    <img src="your-image-link-4.png" alt="Racing Elf" class="w-full h-64 object-cover" />
+                </div>
+                <div class="p-6">
+                    <h3 class="text-xl font-semibold mb-2 text-pine-green">Racing Elf</h3>
+                    <p class="text-gray-600 mb-4">Last minute elf on the shelf ideas using toy cars for an exciting racing setup.</p>
+                    <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full">
+                        <i class="fas fa-download mr-2"></i>Save Image
+                    </button>
+                </div>
+            </div>
+
+            <!-- Idea Card 5 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
+                <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-pink-100 to-red-100">
+                    <img src="your-image-link-5.png" alt="Circus Elf" class="w-full h-64 object-cover" />
+                </div>
+                <div class="p-6">
+                    <h3 class="text-xl font-semibold mb-2 text-pine-green">Circus Elf</h3>
+                    <p class="text-gray-600 mb-4">Hilarious elf on the shelf setup with your elf performing circus acts with toys.</p>
+                    <button class="btn-primary text-white px-4 py-2 rounded-lg w-full">
+                        <i class="fas fa-download mr-2"></i>Save Image
+                    </button>
+                </div>
+            </div>
+
+            <!-- Idea Card 6 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
+                <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-purple-100 to-indigo-100">
+                    <img src="your-image-link-6.png" alt="House Builder Elf" class="w-full h-64 object-cover" />
+                </div>
+                <div class="p-6">
+                    <h3 class="text-xl font-semibold mb-2 text-pine-green">House Builder Elf</h3>
+                    <p class="text-gray-600 mb-4">Easy ideas for elf on shelf where your elf builds houses with marshmallows and blocks.</p>
+                    <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full">
+                        <i class="fas fa-download mr-2"></i>Save Image
+                    </button>
+                </div>
             </div>
         </div>
-    </section>
+
+        <!-- Pagination -->
+        <div class="flex justify-center space-x-2" id="pagination">
+            <button class="pagination-btn active px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold" data-page="1">1</button>
+            <button class="pagination-btn px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold" data-page="2">2</button>
+            <button class="pagination-btn px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold" data-page="3">3</button>
+            <button class="pagination-btn px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold" data-page="4">4</button>
+            <button class="pagination-btn px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold" data-page="5">5</button>
+        </div>
+    </div>
+</section>
+
 
     <!-- Main Article Content -->
     <article class="py-16 bg-gray-50">
