--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <!-- Idea Card 1 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
                 <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-red-100 to-green-100">
-                    <img src="your-image-link-1.png" alt="Cookie Decorating Elf" class="w-full h-64 object-cover" />
+                    <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/Gemini_Generated_Image_av0pfmav0pfmav0p.png" alt="Cookie Decorating Elf" class="w-full h-64 object-cover" />
                 </div>
                 <div class="p-6">
                     <h3 class="text-xl font-semibold mb-2 text-pine-green">Cookie Decorating Elf</h3>
