--- a/index.html
+++ b/index.html
@@ -204,6 +204,24 @@
 </head>
 <body class="text-gray-800">
 
+    <!-- Hero Section -->
+    <section id="hero" class="relative min-h-screen hero-gradient flex items-center justify-center overflow-hidden">
+        <div class="snowfall" id="snowfall"></div>
+        
+        <div class="relative z-10 text-center text-white px-4 max-w-4xl mx-auto">
+            <h1 class="christmas-font text-6xl md:text-8xl mb-6 drop-shadow-lg">
+                Elf on the Shelf Ideas 🎄
+            </h1>
+            <p class="text-xl md:text-2xl mb-8 leading-relaxed">
+                Discover fun, creative, and magical Elf on the Shelf setups for the holidays. Get inspired with over 200 easy elf ideas, funny elf on the shelf suggestions, and quick elf activities that will create unforgettable Christmas memories for your family.
+            </p>
+            <button onclick="scrollToIdeas()" class="btn-primary text-white px-8 py-4 rounded-full text-lg font-semibold inline-flex items-center space-x-3 hover:shadow-2xl">
+                <i class="fas fa-gift"></i>
+                <span>Explore The Ideas - Click Here</span>
+                <i class="fas fa-arrow-down animate-bounce"></i>
+            </button>
+        </div>
+    </section>
    <section id="ideas-grid" class="py-16 bg-white">
     <div class="max-w-6xl mx-auto px-4">
         <h2 class="christmas-font text-5xl text-center mb-12 text-christmas-red">
