--- a/index.html
+++ b/index.html
@@ -33,6 +33,64 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Elf on the Shelf Ideas",
+  "url": "https://elf-on-the-shelf-ideas.pages.dev/",
+  "description": "A collection of creative Elf on the Shelf ideas with fun, festive, and cozy Christmas elf scenes to inspire your holiday decorations.",
+  "publisher": {
+    "@type": "WebSite",
+    "name": "Elf on the Shelf Ideas",
+    "url": "https://elf-on-the-shelf-ideas.pages.dev/"
+  },
+  "hasPart": [
+    {
+      "@type": "ImageObject",
+      "position": 1,
+      "name": "Cookie Decorating Elf",
+      "description": "A playful Christmas elf is busy decorating cookies with colorful frosting and sprinkles, bringing sweet holiday cheer to the kitchen.",
+      "contentUrl": "https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/1-Elf-caught-icing-cookies-with-sprinkles.avif"
+    },
+    {
+      "@type": "ImageObject",
+      "position": 2,
+      "name": "Snowball Fight Elf",
+      "description": "Watch a mischievous Christmas elf turn mini marshmallows into snowballs for a playful holiday snowball fight.",
+      "contentUrl": "https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/2-elf-throwing-mini-marshmallows-like-snowballs.avif"
+    },
+    {
+      "@type": "ImageObject",
+      "position": 3,
+      "name": "Hot Cocoa Bath Elf",
+      "description": "A cozy Christmas elf relaxes inside a giant mug of hot cocoa topped with marshmallows, creating the ultimate holiday comfort scene.",
+      "contentUrl": "https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/3-elf-relaxing-in-a-mug-of-cocoa-and-marshmallows.avif"
+    },
+    {
+      "@type": "ImageObject",
+      "position": 4,
+      "name": "Bookworm Elf",
+      "description": "This curious Christmas elf is enjoying a tiny holiday storybook, bringing the joy of festive reading to life.",
+      "contentUrl": "https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/4-elf-reading-a-mini-christmas-storybook.avif"
+    },
+    {
+      "@type": "ImageObject",
+      "position": 5,
+      "name": "Christmas Tree Climber",
+      "description": "A cheeky Christmas elf climbs a beautifully decorated holiday tree, surrounded by ornaments and twinkling lights.",
+      "contentUrl": "https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/5-elf-climbing-up-the-christmas-tree.avif"
+    },
+    {
+      "@type": "ImageObject",
+      "position": 6,
+      "name": "Elf in a Stocking",
+      "description": "A sneaky Christmas elf peeks out from a red holiday stocking, ready to surprise anyone near the fireplace.",
+      "contentUrl": "https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/6-elf-hiding-inside-a-christmas-stocking.avif"
+    }
+  ]
+}
+</script>
 
 
     <style>
@@ -229,91 +287,101 @@
         </h2>
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12" id="ideasContainer">
-            <!-- Idea Card 1 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
-                <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-red-100 to-green-100">
-                    <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/Gemini_Generated_Image_av0pfmav0pfmav0p.png" alt="Cookie Decorating Elf" class="w-full h-64 object-cover" />
-                </div>
-                <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-2 text-pine-green">Cookie Decorating Elf</h3>
-                    <p class="text-gray-600 mb-4">Easy elf ideas where your elf is caught decorating cookies with mini sprinkles and frosting.</p>
-                   <button id="saveImageBtn" class="btn-primary text-white px-4 py-2 rounded-lg w-full">
-  <i class="fas fa-download mr-2"></i>Save Image
-</button>
+           <!-- Idea Card 1 -->
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
+        <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-red-100 to-green-100">
+          <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/1-Elf-caught-icing-cookies-with-sprinkles.avif" alt="Cookie Decorating Elf" class="w-full h-64 object-cover" loading="lazy" />
+        </div>
+        <div class="p-6">
+          <h3 class="text-xl font-semibold mb-2 text-pine-green">Cookie Decorating Elf</h3>
+          <p class="text-gray-600 mb-4">A playful Christmas elf is busy decorating cookies with colorful frosting and sprinkles, bringing sweet holiday cheer to the kitchen. This festive elf cookie-decorating scene captures the magic of Christmas baking fun.</p>
+          <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn"
+                  data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/1-Elf-caught-icing-cookies-with-sprinkles.avif"
+                  data-file-name="Cookie_Decorating_Elf.avif">
+            <i class="fas fa-download mr-2"></i>Save Image
+          </button>
+        </div>
+      </div>
 
+      <!-- Idea Card 2 -->
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
+        <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-blue-100 to-purple-100">
+          <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/2-elf-throwing-mini-marshmallows-like-snowballs.avif" alt="Snowball Fight Elf" class="w-full h-64 object-cover" loading="lazy" />
+        </div>
+        <div class="p-6">
+          <h3 class="text-xl font-semibold mb-2 text-pine-green">Snowball Fight Elf</h3>
+          <p class="text-gray-600 mb-4">Watch a mischievous Christmas elf turn mini marshmallows into snowballs for a playful holiday snowball fight. This funny elf winter scene is perfect for adding laughter and festive spirit to your Christmas decor ideas.</p>
+          <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn"
+                  data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/2-elf-throwing-mini-marshmallows-like-snowballs.avif"
+                  data-file-name="Snowball_Fight_Elf.avif">
+            <i class="fas fa-download mr-2"></i>Save Image
+          </button>
+        </div>
+      </div>
 
-                </div>
-            </div>
+      <!-- Idea Card 3 -->
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
+        <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-yellow-100 to-orange-100">
+          <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/3-elf-relaxing-in-a-mug-of-cocoa-and-marshmallows.avif" alt="Hot Cocoa Bath Elf" class="w-full h-64 object-cover" loading="lazy" />
+        </div>
+        <div class="p-6">
+          <h3 class="text-xl font-semibold mb-2 text-pine-green">Hot Cocoa Bath Elf</h3>
+          <p class="text-gray-600 mb-4">A cozy Christmas elf relaxes inside a giant mug of hot cocoa topped with marshmallows, creating the ultimate holiday comfort scene. This warm and whimsical elf cocoa bath design captures the magic of winter coziness.</p>
+          <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn"
+                  data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/3-elf-relaxing-in-a-mug-of-cocoa-and-marshmallows.avif"
+                  data-file-name="Hot_Cocoa_Bath_Elf.avif">
+            <i class="fas fa-download mr-2"></i>Save Image
+          </button>
+        </div>
+      </div>
 
-            <!-- Idea Card 2 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
-                <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-blue-100 to-purple-100">
-                    <img src="your-image-link-2.png" alt="Reading Time Elf" class="w-full h-64 object-cover" />
-                </div>
-                <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-2 text-pine-green">Reading Time Elf</h3>
-                    <p class="text-gray-600 mb-4">Quick elf on shelf ideas featuring your elf reading Christmas stories to stuffed animals.</p>
-                    <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full">
-                        <i class="fas fa-download mr-2"></i>Save Image
-                    </button>
-                </div>
-            </div>
+      <!-- Idea Card 4 -->
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
+        <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-green-100 to-teal-100">
+          <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/4-elf-reading-a-mini-christmas-storybook.avif" alt="Bookworm Elf" class="w-full h-64 object-cover" loading="lazy" />
+        </div>
+        <div class="p-6">
+          <h3 class="text-xl font-semibold mb-2 text-pine-green">Bookworm Elf</h3>
+          <p class="text-gray-600 mb-4">This curious Christmas elf is enjoying a tiny holiday storybook, bringing the joy of festive reading to life. A perfect elf scene for cozy winter nights, inspiring holiday storytelling and magical family traditions.</p>
+          <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn"
+                  data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/4-elf-reading-a-mini-christmas-storybook.avif"
+                  data-file-name="Bookworm_Elf.avif">
+            <i class="fas fa-download mr-2"></i>Save Image
+          </button>
+        </div>
+      </div>
 
-            <!-- Idea Card 3 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
-                <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-yellow-100 to-orange-100">
-                    <img src="your-image-link-3.png" alt="Artist Elf" class="w-full h-64 object-cover" />
-                </div>
-                <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-2 text-pine-green">Artist Elf</h3>
-                    <p class="text-gray-600 mb-4">Funny elf on the shelf ideas where your elf creates masterpieces with crayons and paper.</p>
-                    <button class="btn-primary text-white px-4 py-2 rounded-lg w-full">
-                        <i class="fas fa-download mr-2"></i>Save Image
-                    </button>
-                </div>
-            </div>
+      <!-- Idea Card 5 -->
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
+        <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-pink-100 to-red-100">
+          <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/5-elf-climbing-up-the-christmas-tree.avif" alt="Christmas Tree Climber" class="w-full h-64 object-cover" loading="lazy" />
+        </div>
+        <div class="p-6">
+          <h3 class="text-xl font-semibold mb-2 text-pine-green">Christmas Tree Climber</h3>
+          <p class="text-gray-600 mb-4">A cheeky Christmas elf climbs a beautifully decorated holiday tree, surrounded by ornaments and twinkling lights. This fun and playful elf tree-climbing scene adds festive mischief to your Christmas celebrations.</p>
+          <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn"
+                  data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/5-elf-climbing-up-the-christmas-tree.avif"
+                  data-file-name="Christmas_Tree_Climber.avif">
+            <i class="fas fa-download mr-2"></i>Save Image
+          </button>
+        </div>
+      </div>
 
-            <!-- Idea Card 4 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
-                <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-green-100 to-teal-100">
-                    <img src="your-image-link-4.png" alt="Racing Elf" class="w-full h-64 object-cover" />
-                </div>
-                <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-2 text-pine-green">Racing Elf</h3>
-                    <p class="text-gray-600 mb-4">Last minute elf on the shelf ideas using toy cars for an exciting racing setup.</p>
-                    <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full">
-                        <i class="fas fa-download mr-2"></i>Save Image
-                    </button>
-                </div>
-            </div>
-
-            <!-- Idea Card 5 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
-                <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-pink-100 to-red-100">
-                    <img src="your-image-link-5.png" alt="Circus Elf" class="w-full h-64 object-cover" />
-                </div>
-                <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-2 text-pine-green">Circus Elf</h3>
-                    <p class="text-gray-600 mb-4">Hilarious elf on the shelf setup with your elf performing circus acts with toys.</p>
-                    <button class="btn-primary text-white px-4 py-2 rounded-lg w-full">
-                        <i class="fas fa-download mr-2"></i>Save Image
-                    </button>
-                </div>
-            </div>
-
-            <!-- Idea Card 6 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
-                <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-purple-100 to-indigo-100">
-                    <img src="your-image-link-6.png" alt="House Builder Elf" class="w-full h-64 object-cover" />
-                </div>
-                <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-2 text-pine-green">House Builder Elf</h3>
-                    <p class="text-gray-600 mb-4">Easy ideas for elf on shelf where your elf builds houses with marshmallows and blocks.</p>
-                    <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full">
-                        <i class="fas fa-download mr-2"></i>Save Image
-                    </button>
-                </div>
-            </div>
+      <!-- Idea Card 6 -->
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover transition-all duration-300">
+        <div class="aspect-w-1 aspect-h-1 bg-gradient-to-br from-purple-100 to-indigo-100">
+          <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/6-elf-hiding-inside-a-christmas-stocking.avif" alt="Elf in a Stocking" class="w-full h-64 object-cover" loading="lazy" />
+        </div>
+        <div class="p-6">
+          <h3 class="text-xl font-semibold mb-2 text-pine-green">Elf in a Stocking</h3>
+          <p class="text-gray-600 mb-4">A sneaky Christmas elf peeks out from a red holiday stocking, ready to surprise anyone near the fireplace. This adorable stocking stuffer elf scene is a perfect mix of Christmas magic and playful mischief.</p>
+          <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn"
+                  data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/6-elf-hiding-inside-a-christmas-stocking.avif"
+                  data-file-name="Elf_in_a_Stocking.avif">
+            <i class="fas fa-download mr-2"></i>Save Image
+          </button>
+        </div>
+      </div>
         </div>
 
         <!-- Pagination -->
