--- a/index.html
+++ b/index.html
@@ -29,10 +29,22 @@
     <meta name="twitter:description" content="Get inspired with 12 fun and easy Elf on the Shelf ideas for Christmas 2025. Perfect for quick and last-minute setups your kids will love.">
     <meta name="twitter:image" content="https://elf-on-the-shelf-ideas.pages.dev/elf-on-shelf-ideas-cover.png"> <!-- Replace with your image -->
 
-    <!-- Styles & Fonts -->
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+   <!-- ✅ Optimized Styles & Fonts -->
+<!-- Preconnect for faster font loading -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<!-- Tailwind CSS (async load with preload fallback) -->
+<link rel="preload" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"></noscript>
+
+<!-- Font Awesome (async load with preload fallback) -->
+<link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css"></noscript>
+
+<!-- Google Fonts (with display=swap for non-blocking text render) -->
+<link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
