--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta name="keywords" content="elf ideas, elf on the shelf ideas, easy elf on the shelf ideas, funny elf on the shelf ideas, quick elf on the shelf ideas, naughty elf ideas, last minute elf on the shelf ideas">
     <link rel="canonical" href="https://elf-on-the-shelf-ideas.pages.dev/">
     <meta name="robots" content="index, follow">
+      <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
