--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-8">
                 <!-- Idea Card 1 -->
-                <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+                <card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
                     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-green-100">
                         <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/1-Elf-caught-icing-cookies-with-sprinkles.avif" 
                              alt="Cookie Decorating Elf" 
@@ -402,7 +402,7 @@
                              loading="eager" />
                     </div>
                     <div class="p-4 md:p-6">
-                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Cookie Decorating Elf</h3>
+                        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">1> Cookie Decorating Elf</h3>
                         <p class="text-gray-600 mb-4 text-sm md:text-base">A playful Christmas elf is busy decorating cookies with colorful frosting and sprinkles, bringing sweet holiday cheer to the kitchen. This festive elf cookie-decorating scene captures the magic of Christmas baking fun.</p>
                         <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                                 data-image-url="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/1-Elf-caught-icing-cookies-with-sprinkles.avif"
@@ -411,7 +411,7 @@
                             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
                         </button>
                     </div>
-                </article>
+                </card>
 
                 <!-- Idea Card 2 -->
                 <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
