--- a/index.html
+++ b/index.html
@@ -522,8 +522,9 @@
                         </button>
                     </div>
                 </card>
-               <!-- Idea Card 7 -->
-<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+                    
+              <!-- Idea Card 7 -->
+<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/7-Marshmallow_Spa_Elf_fgqe4i.avif" 
              alt="Marshmallow Spa Elf" 
@@ -533,20 +534,20 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">7. Marshmallow Spa Elf</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Marshmallow Spa Elf</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">This elf is living the sweet life, soaking in a fluffy marshmallow bubble bath. A cozy and whimsical holiday scene that brings spa-day relaxation to Christmas mischief.</p>
-        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/7-Marshmallow_Spa_Elf_fgqe4i.avif"
                 data-file-name="Marshmallow_Spa_Elf.avif"
                 aria-label="Save Marshmallow Spa Elf image">
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</card>
+</article>
 
 <!-- Idea Card 8 -->
-<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
-    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-green-100 to-teal-100">
+<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/8-Gamer_Elf_tgwag0.avif" 
              alt="Gamer Elf" 
              class="card-img" 
@@ -555,20 +556,20 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">8. Gamer Elf</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Gamer Elf</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Even elves need some downtime, and this one is glued to a video game with a toy controller. A playful idea that shows the fun side of holiday gaming nights.</p>
-        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/8-Gamer_Elf_tgwag0.avif"
                 data-file-name="Gamer_Elf.avif"
                 aria-label="Save Gamer Elf image">
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</card>
+</article>
 
 <!-- Idea Card 9 -->
-<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
-    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-yellow-100 to-orange-100">
+<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/9-Elf_Zip_Line_eagd5n.avif" 
              alt="Elf Zip Line" 
              class="card-img" 
@@ -577,20 +578,20 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">9. Elf Zip Line</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Elf Zip Line</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Adventure awaits as this elf zips across the room on a candy cane zip line. A high-energy setup that fills your home with festive action and giggles.</p>
-        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/9-Elf_Zip_Line_eagd5n.avif"
                 data-file-name="Elf_Zip_Line.avif"
                 aria-label="Save Elf Zip Line image">
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</card>
+</article>
 
 <!-- Idea Card 10 -->
-<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
-    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-pink-100">
+<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Toilet_Paper_Roll_Elf_t1xtrs.avif" 
              alt="Toilet Paper Roll Elf" 
              class="card-img" 
@@ -599,20 +600,20 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">10. Toilet Paper Roll Elf</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Toilet Paper Roll Elf</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Caught in a silly mess, this elf is stuck inside a toilet paper roll. A hilarious holiday prank that adds laughter to your Christmas countdown.</p>
-        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Toilet_Paper_Roll_Elf_t1xtrs.avif"
                 data-file-name="Toilet_Paper_Roll_Elf.avif"
                 aria-label="Save Toilet Paper Roll Elf image">
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</card>
+</article>
 
 <!-- Idea Card 11 -->
-<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
-    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-blue-100 to-indigo-100">
+<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Baking_Helper_Elf_rpcq5q.avif" 
              alt="Baking Helper Elf" 
              class="card-img" 
@@ -621,20 +622,20 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">11. Baking Helper Elf</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Baking Helper Elf</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Covered head to toe in flour, this elf has clearly been “helping” in the kitchen. A funny baking scene that makes holiday treats extra memorable.</p>
-        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Baking_Helper_Elf_rpcq5q.avif"
                 data-file-name="Baking_Helper_Elf.avif"
                 aria-label="Save Baking Helper Elf image">
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</card>
+</article>
 
 <!-- Idea Card 12 -->
-<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
-    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-pink-100 to-purple-100">
+<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Elf_Rock_Band_pumarw.avif" 
              alt="Elf Rock Band" 
              class="card-img" 
@@ -643,16 +644,17 @@
              loading="lazy" />
     </div>
     <div class="p-4 md:p-6">
-        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">12. Elf Rock Band</h3>
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Elf Rock Band</h3>
         <p class="text-gray-600 mb-4 text-sm md:text-base">Rocking out with a toy guitar, this elf is ready to put on a Christmas concert. A lively idea that adds music, fun, and festive energy to your holiday decor.</p>
-        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
                 data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Elf_Rock_Band_pumarw.avif"
                 data-file-name="Elf_Rock_Band.avif"
                 aria-label="Save Elf Rock Band image">
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</card>
+</article>
+
 
 
             </div>
