--- a/index.html
+++ b/index.html
@@ -522,7 +522,27 @@
                     </button>
                 </div>
             </article>
-
+<!-- Idea Card 7 -->
+<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
+        <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/7-Marshmallow_Spa_Elf_fgqe4i.avif" 
+             alt="Marshmallow Spa Elf" 
+             class="card-img" 
+             width="400" 
+             height="256"
+             loading="lazy" />
+    </div>
+    <div class="p-4 md:p-6">
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">Marshmallow Spa Elf</h3>
+        <p class="text-gray-600 mb-4 text-sm md:text-base">This elf is living the sweet life, soaking in a fluffy marshmallow bubble bath. A cozy and whimsical holiday scene that brings spa-day relaxation to Christmas mischief.</p>
+        <button class="btn-secondary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+                data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/7-Marshmallow_Spa_Elf_fgqe4i.avif"
+                data-file-name="Marshmallow_Spa_Elf.avif"
+                aria-label="Save Marshmallow Spa Elf image">
+            <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
+        </button>
+    </div>
+</article>
 
 <!-- Idea Card 8 -->
 <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
@@ -780,7 +800,7 @@
             buttons.forEach(button => {
                 button.addEventListener('click', function(e) {
                     e.preventDefault();
-                    const card = this.closest('card');
+                    const card = this.closest('article');
                     const img = card?.querySelector('img');
                     
                     if (img && img.src) {
