--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <link rel="preconnect" href="https://ritamdebnatharc.github.io">
+    <link rel="preconnect" href="https://res.cloudinary.com">
+
     
     <!-- Primary Meta -->
     <title>12 Elf on the Shelf Ideas 🎄 for Christmas 2025</title>
