--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-8">
             <!-- Idea Card 1 -->
-            <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+            <card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
                 <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-green-100">
                     <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/1-Elf-caught-icing-cookies-with-sprinkles.avif" 
                          alt="Cookie Decorating Elf" 
@@ -456,10 +456,10 @@
                         <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
                     </button>
                 </div>
-            </article>
+            </card>
 
             <!-- Idea Card 2 -->
-            <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+            <card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
                 <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-blue-100 to-purple-100">
                     <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/2-elf-throwing-mini-marshmallows-like-snowballs.avif" 
                          alt="Snowball Fight Elf" 
@@ -478,10 +478,10 @@
                         <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
                     </button>
                 </div>
-            </article>
+            </card>
 
             <!-- Idea Card 3 -->
-            <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+            <card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
                 <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-yellow-100 to-orange-100">
                     <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/3-elf-relaxing-in-a-mug-of-cocoa-and-marshmallows.avif" 
                          alt="Hot Cocoa Bath Elf" 
@@ -500,7 +500,7 @@
                         <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
                     </button>
                 </div>
-            </article>
+            </card>
 
             <!-- Idea Card 4 -->
             <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
