--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             </card>
 
             <!-- Idea Card 4 -->
-            <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+            <card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
                 <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-green-100 to-teal-100">
                     <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/4-elf-reading-a-mini-christmas-storybook.avif" 
                          alt="Bookworm Elf" 
@@ -522,10 +522,10 @@
                         <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
                     </button>
                 </div>
-            </article>
+            </card>
 
             <!-- Idea Card 5 -->
-            <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+            <card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
                 <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-pink-100 to-red-100">
                     <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/5-elf-climbing-up-the-christmas-tree.avif" 
                          alt="Christmas Tree Climber" 
@@ -544,10 +544,10 @@
                         <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
                     </button>
                 </div>
-            </article>
+            </card>
 
             <!-- Idea Card 6 -->
-            <article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+            <card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
                 <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
                     <img src="https://ritamdebnatharc.github.io/Elf-on-the-Shelf-Ideas/6-elf-hiding-inside-a-christmas-stocking.avif" 
                          alt="Elf in a Stocking" 
@@ -566,9 +566,9 @@
                         <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
                     </button>
                 </div>
-            </article>
+            </card>
 <!-- Idea Card 7 -->
-<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/7-Marshmallow_Spa_Elf_fgqe4i.avif" 
              alt="Marshmallow Spa Elf" 
@@ -587,10 +587,10 @@
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</article>
+</card>
 
 <!-- Idea Card 8 -->
-<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/8-Gamer_Elf_tgwag0.avif" 
              alt="Gamer Elf" 
@@ -609,10 +609,10 @@
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</article>
+</card>
 
 <!-- Idea Card 9 -->
-<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730667/9-Elf_Zip_Line_eagd5n.avif" 
              alt="Elf Zip Line" 
@@ -631,10 +631,10 @@
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</article>
+</card>
 
 <!-- Idea Card 10 -->
-<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Toilet_Paper_Roll_Elf_t1xtrs.avif" 
              alt="Toilet Paper Roll Elf" 
@@ -653,10 +653,10 @@
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</article>
+</card>
 
 <!-- Idea Card 11 -->
-<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Baking_Helper_Elf_rpcq5q.avif" 
              alt="Baking Helper Elf" 
@@ -675,10 +675,10 @@
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</article>
+</card>
 
 <!-- Idea Card 12 -->
-<article class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
     <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-purple-100 to-indigo-100">
         <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756730666/Elf_Rock_Band_pumarw.avif" 
              alt="Elf Rock Band" 
@@ -697,7 +697,7 @@
             <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
         </button>
     </div>
-</article>
+</card>
 
 
 
