--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
             buttons.forEach(button => {
                 button.addEventListener('click', function(e) {
                     e.preventDefault();
-                    const card = this.closest('article');
+                    const card = this.closest('card');
                     const img = card?.querySelector('img');
                     
                     if (img && img.src) {
